[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cms-bluebutton-sdk"
authors = [
    {name = "CMS Blue Button 2.0 Team", email = "BlueButtonAPI@cms.hhs.gov"},
]
description = "An SDK used for interacting with the CMS Blue Button 2.0 API"
requires-python = ">=3.9"
readme = "README.md"
version = "1.0.4"
license = "CC0-1.0"
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests >= 2.32.3",
    "requests-toolbelt >= 0.9.1",
    "pyyaml >= 6.0.2",
    "idna >= 3.7",
    "urllib3 >= 1.26.8",
    "certifi == 2025.1.31"
]

[project.optional-dependencies]
dev = [
    "pylint >=2.14.0",
    "toml >=0.10.2",
    "pytest >= 8.3.5",
    "packaging >= 24.0",
    "flake8 >= 4.0.1",
    "coverage >= 6.3.2",
    "requests-mock >= 1.12.1",
    "pyyaml >= 6.0.2",
]

[tool.setuptools]
py-modules = ["cms_bluebutton"]

[tool.setuptools.packages.find]
include = ["cms_bluebutton*"]
exclude = ["cms_bluebutton.tests.*"]
